feat: add url_for in profile pages

--- a/Fleshi/template/homepage.html
+++ b/Fleshi/template/homepage.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fléshi - Página inicial</title>
+    <title>
+        {% block title %}
+            Fléshi
+        {% endblock %}
+    </title>
 </head>
 <body>
-<h1>Fléshi - Página Inicial</h1>
-
+    <h1>Fléshi</h1>
 </body>
 </html>
