--- a/Fleshi/template/profile.html
+++ b/Fleshi/template/profile.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Fléshi - Perfil</title>
-</head>
-<body>
-<h1>Perfil do usuário: {{ username }}</h1>
+{% extends "homepage.html" %}
 
-<a href="{{ url_for('homepage') }}">Sair</a>
-</body>
-</html>
+{% block title %}
+    Perfil - {{ Username }}
+{% endblock %}
+
+{% block title %}
+    <body>
+        <h1>Perfil fo usuário: {{ username }}</h1>
+
+    <a href="{{ url_for('homepage') }}">Sair</a>
+    </body>
+{% endblock %}
